# rutel

./: .gitignore  Cargo.toml  README.md
rutel_derive/src/: lib.rs
src/: background.rs  bot.rs  bot_command.rs  business.rs  chat_boost.rs  error.rs  files.rs  forum_topic.rs  funcs.rs  games.rs  giveaway.rs  inline_mode.rs  input_media.rs  keyboard_button.rs  lib.rs  main.rs  message.rs  methods.rs  net.rs  params.rs  passport.rs  payments.rs  poll.rs  reaction.rs  stickers.rs  types.rs
src/methods/: edit_message_live_location.rs  forward_message.rs  get_updates.rs  mod.rs  send_audio.rs  send_contact.rs  send_document.rs  send_location.rs  send_media_group.rs  send_message.rs  send_photo.rs  send_venue.rs  send_video.rs  send_video_note.rs  send_voice.rs  stop_message_live_location.rs
tests/: test.rs  testing.rs
