[package]
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]
edition = "2018"
name = "rutel"
version = "0.6.3"

[dependencies]
netc = {version = "0.6", git = "https://github.com/serbe/netc"}
rutel_derive = {version = "0.4", git = "https://github.com/serbe/rutel_derive"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
dotenv = "0.15"
tokio = {version = "1.7", features = ["full"]}
