[package]
authors = ["serbe <serbenv@gmail.com>"]
description = "Rust telegram bot library"
edition = "2021"
name = "rutel"
version = "0.6.15"
readme = "README.md"
repository = "https://github.com/serbe/rutel/"
license = "MIT OR Apache-2.0"

[dependencies]
netc = "0.1"
rutel_derive = "0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
dotenv = "0.15"
tokio = {version = "1", features = ["full"]}
